--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,140 @@
 <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
-      <h1>Bienvenido a la tienda virtual de artesanias ISI</h1>
+      <h1>Tienda de artesanias ISI</h1>
     </div>
   </section>
 
- 
+  <div class="section-1">
+   <div class="container text-center">
+
+    <section id="top">
+      <h1> </h1>
+      <h2 class="heading-1">Nosotros Somos</h2>
+    </section>
+   
+   <p>
+Somos una tienda joven que busca rescatar y fomentar artesanias tradicionales de nuestro
+pais, procurando la preservacion de las tecnicas ya existentes y ofreciendo sustentos para las familias
+de los artesanos, mediante compra directa de cada producto artesanal
+   </p>
+
+   <div class="row justify-content-center text-center">
+   <div class="col md 4">
+     
+   <div class="card" style="width: 20 rem;">
+   <img  src="assets/img/img3.jpg"alt="image1" class="card-img-top">
+   <div class="card body">
+     <h4 class="card-title">Mision</h4>
+     <p> satisfacer los requerimientos y expectativas de nuestros clientes con productos de alta 
+       calidad y novedosos diseños, garantizando la permanencia y el desarrollo</p>
+   </div>
+  </div>
+</div>
+<div class="col md 4">
+     
+  <div class="card" style="width: 20 rem;">
+  <img  src="assets/img/artesanal.jpg"alt="image2" class="card-img-top">
+  <div class="card body">
+    <h4 class="card-title">Vision</h4>
+    <p> Cumplimiento, mediante la constante innovación y adquisición de tecnologías que 
+      permitan mejorar la efectividad, agregado a los productos que fabrica.</p>
+  </div>
+ </div>
+</div>
+<div class="col md 4">
+     
+  <div class="card" style="width: 20 rem;">
+  <img  src="assets/img/p1.jpg"alt="imag3" class="card-img-top">
+  <div class="card body">
+    <h4 class="card-title">Valores</h4>
+    <p> Trato justo y correcto hacia nuestros clientes es clave para fomentar relaciones duraderas con ellos.
+      Respetamos y valoramos inmensamente la confianza de nuestros clientes
+</p>
+  </div>
+ </div>
+</div>
+  </div>
+
+
+  <section id="portfolio" class="portfolio">
+    <div class="container" data-aos="fade-up">
+      <div class="section-header">
+        <h3 class="section-title">Novedades</h3>
+        <p class="section-description">Estas son nuestras ultimas Novedades de artesanias ISI.</p>
+      </div>
+
+      <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app" [routerLink]="['/products/category', 1]">
+          <img src="../../../assets/img/prod5.jpeg" class="img-fluid" alt="">
+          
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web" [routerLink]="['/products/category', 2]">
+          <img src="../../../assets/img/prod21.jpeg" class="img-fluid" alt="">
+          
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app" [routerLink]="['/products/category', 5]">
+          <img src="../../../assets/img/prod8.jpeg" class="img-fluid" alt="">
+          
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web" [routerLink]="['/products/category', 3]">
+          <img src="../../../assets/img/prod12.jpeg" class="img-fluid" alt="">
+          
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app" [routerLink]="['/products/category', 4]">
+          <img src=".../../../assets/img/prod15.jpeg" class="img-fluid" alt="">
+        
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-app" [routerLink]="['/products']">
+          <img src="../../../assets/img/prod11.jpeg" class="img-fluid" alt="" >
+          
+        </div>
+
+      </div>
+
+    </div>
+  </section>
+
+
+
+  </div>
+  <section id="contact">
+    <div class="container">
+      <div class="container text-center">
+        <h3 class="section-title">Contactos</h3>
+        <p class="section-description">
+          Visitanos en nuestra tienda ubicada en Miraflores</p>
+      </div>
+    </div>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d956.1792090634054!2d-68.07934357073597!3d-16.540387099286974!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x915f213a76ce33b7%3A0xcdb0a61475a6ef6e!2sAv%20Montenegro%201483-1365%2C%20La%20Paz!5e0!3m2!1ses!2sbo!4v1608000422516!5m2!1ses!2sbo" width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+
+        <div class="col-lg-3 col-md-4">
+
+          <div class="info">
+            <div>
+              <i class="fa fa-map-marker"></i>
+              <p>
+                1080 Miraflores<br>La Paz, LP</p>
+            </div>
+
+          
+            <div>
+              <i class="fa fa-phone"></i>
+              <p>+591 60104958</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
+  </section>
