Add components and add routes

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -100,13 +100,81 @@ de los artesanos, mediante compra directa de cada producto artesanal
     </div>
   </section>
 
+  
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        
+        <img src=".../../../assets/img/n1.jpeg" class="img-fluid" alt="">
+      </div>
+      <div class="col-sm-5">
+        <div class="section-1">
+          <div class="container text-center">
+       
+           <section id="top">
+             <h1> </h1>
+             <h2 class="heading-1">Nuestra Tienda en La Paz </h2>
+           </section>
+          
+          <p>
+            En la zona turística de la ciudad de La Paz en Bolivia usted encontrará 
+            nuestra tienda. Tienda de Artesanias ISI vende artesanías 100% bolivianas, hechas a mano, y de comercio justo.
+           Tambien ingrese a la tienda virtual ISI, regístrese como nuestro cliente y acceda al catálogo de los mas novedosos productos que ofrecemos 
+             
+
+      </div>
+    </div>
+    </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-5">
+        <div class="section-1">
+          <div class="container text-center">
+       
+           <section id="top">
+             <h1> </h1>
+             <h2 class="heading-1">La importancia del comercio artesanal</h2>
+           </section>
+          
+          <p>
+            Tienda ISI tiene dos estatus dentro de WFTO, la de miembro que nos
+             identifica con el movimiento de comercio justo y la de organización garantizada FT,
+              que significa que hemos demostrado que los principios de cumplen cabalmente en toda
+              la cadena de comercialización y produccción. La importancia va de dos lados; la del cliente
+               y la del productor
+      </div>
+    </div>
+    </div>
+
+      
+      <div class="col-sm-6">
+        
+        <img src=".../../../assets/img/n4.jpeg" class="img-fluid" alt="">
+      </div>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
 
 
   </div>
   <section id="contact">
     <div class="container">
       <div class="container text-center">
-        <h3 class="section-title">Contactos</h3>
+        <h3 class="section-title">Comunicate con Nosotros</h3>
         <p class="section-description">
           Visitanos en nuestra tienda ubicada en Miraflores</p>
       </div>
