--- a/src/app/components/products/form-product.component.html
+++ b/src/app/components/products/form-product.component.html
@@ -1,1 +1,62 @@
-<p>form-product works!</p>
+<div class="container">
+    <div class="card-body">
+        <h5 class="card-title">{{titulo}}</h5>
+        <form>
+            <div class="form-group row">
+                <label for ="product_name" class="col-form-label col-sm-2">Producto</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" name="product_name" [(ngModel)]="product.product_name" >
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for ="details" class="col-form-label col-sm-2">Detalles</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" name="details" [(ngModel)]="product.details" >
+                </div>
+
+            </div>
+            
+            <div class="form-group row">
+                <label for ="size" class="col-form-label col-sm-2">Talla</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" name="size" [(ngModel)]="product.size" >
+                </div>
+
+            </div>
+
+            <div class="form-group row">
+                <label for ="color" class="col-form-label col-sm-2">Color</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" name="color" [(ngModel)]="product.color" >
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for ="costProduct" class="col-form-label col-sm-2">Precio</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" name="costProduct" [(ngModel)]="product.costProduct" >
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for ="status" class="col-form-label col-sm-2">Status</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" name="status" [(ngModel)]="product.status" >
+                </div>
+
+            </div>
+
+            <button class="btn btn-success" role="button" (click)='create()' *ngIf="!product.product_id else elseBlock">Agregar</button>
+            
+            <ng-template #elseBlock>
+                <button class="btn btn-success" role="button" (click)='update()'>Actualizar</button>
+            </ng-template>
+
+        </form>
+    </div>
+
+
+
+    <p>form-product works!</p>
+</div>
