--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -12,6 +12,9 @@
         <th scope="col">Color</th>
         <th scope="col">Costo</th>
         <th scope="col">Status</th>
+        <th scope="col">        </th>
+        <th scope="col">        </th>
+        
       </tr>
     </thead>
     <tbody>
@@ -23,6 +26,8 @@
         <td>{{product.color}}</td>
         <td>{{product.costProduct}}</td>
         <td>{{product.status}}</td>
+        <td> <button type="button" name="button" class="btn btn-primary" [routerLink]="['/products/form', product.product_id]">Editar</button> </td>
+        <td> <button class="btn btn-danger" (click)="delete(product)">Eliminar</button> </td>
       </tr>
       
     </tbody>
