--- a/src/app/components/sesion/sesion.component.html
+++ b/src/app/components/sesion/sesion.component.html
@@ -1,1 +1,61 @@
-<p>cart sesion!</p>
+<form>
+
+    <div class="form-row">
+       
+        <div class="form-group col-md-2">
+          <label for="inputNombre">Nombre</label>
+          <input type="text" class="form-control" id="inputNombre" placeholder="Nombre">
+        </div>
+        <div class="form-group col-md-2">
+            <label for="inputApellido">Apellido</label>
+            <input type="text" class="form-control" id="inputApellido" placeholder="Apellido">
+          </div>
+      
+      </div>
+
+      <div class="form-group col-md-4">
+        <label for="inputEmail4">Email</label>
+        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+      </div>
+
+
+<div class="form-row">
+       
+        <div class="form-group col-md-2">
+          <label for="inputTelefono">Telefono</label>
+          <input type="text" class="form-control" id="inputTelefono" placeholder="Telefono">
+        </div>
+
+
+        <div class="form-group col-md-2">
+            <label for="inputCelular">Celular</label>
+            <input type="text" class="form-control" id="inputCelular" placeholder="Celular">
+          </div>
+        
+      
+      </div>
+
+
+      <div class="form-group col-md-4">
+        <label for="inputAddress">Address</label>
+        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+      </div>
+
+
+      
+    <div class="form-row">
+        <div class="form-group col-md-2">
+            <label for="inputUsuario">Usuario</label>
+            <input type="text" class="form-control" id="inputUsuario" placeholder="Usuario">
+          </div>
+      
+      <div class="form-group col-md-3">
+        <label for="inputPassword4">Password</label>
+        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+      </div>
+    </div>
+  
+   
+    
+    <button type="submit" class="btn btn-primary">Sign up</button>
+  </form>
