--- a/src/app/components/catalogue/catalogue.component.html
+++ b/src/app/components/catalogue/catalogue.component.html
@@ -1,34 +1,38 @@
 <section id="portfolio" class="portfolio">
 
   <div class="container" data-aos="fade-up">
-    <div class="col-sm-12 my-1"> 
-  
+    <div class="col-sm-12 my-1">
+
   <input class="form-control" id="nombre" type="text" placeholder="Search.." name="filterPost" [(ngModel)]="filterPost">
   </div>
 
-  
+
 </div>
 <br>
 <br>
-  <div class="container" data-aos="fade-up">
+  <div class="containerCard" data-aos="fade-up">
 
 
 
-    
 
-    <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="200">
 
-        <div class="card" style="width: 18rem;" *ngFor="let product of product | filter: filterPost " >
-          <img src="https://cdn.pixabay.com/photo/2018/01/01/14/21/one-3054263_960_720.jpg"  class="card-img-top" alt="...">
+    <div class="row row-cols-1 row-cols-md-3 g-4" >
+      <div class="col md 8" style="width: 18rem;" *ngFor="let product of product | filter: filterPost " >
+
+        <div class="card">
+          <img src="https://cdn.pixabay.com/photo/2018/01/01/14/21/one-3054263_960_720.jpg"  class="card-img-top" class="zoom"   alt="...">
 
           <div class="card-body">
-            <p class="card-text">{{product.product_name}}</p>
+            <a class="card-link"style="font-size: 17px; color: black;" [routerLink]="['../product',product.product_id]">{{product.product_name}}</a>
+            <p class="card-text">{{product.details}}</p>
             <p class="card-text">Bs. {{product.costProduct}}</p>
-            <a href="viewDetails" class="btn btn-primary">Ver producto</a>
+
           </div>
         </div>
+      </div>
     </div>
-  </div>
+</div>
+
 </section>
 
 
