updating user admin and user update

--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -26,7 +26,7 @@
             <option value="6">XXL/option>
           </select>
 
-          <dt><p class="card-text">Cantidad:{{product.quantity}}</p></dt>
+          <dt><p class="card-text">Cantidad</p></dt>
 
           <select id = "inputQuantity" name="quantity" ngModel #quantity="ngModel">
             <option value="1">1</option>
