--- a/src/app/components/user/user-admin/user-form.component.html
+++ b/src/app/components/user/user-admin/user-form.component.html
@@ -4,7 +4,7 @@
     <div class="card-body">
 
       <div class="position-absolute start-50 translate-middle">
-        <h5 class="card-title"><b>Actualizar datos</b></h5>
+        <h5 class="card-title"><b>Registrar usuarios</b></h5>
       </div>
 
     <form class="row g-3 needs-validation" novalidate>
@@ -23,7 +23,7 @@
           Looks good!
         </div>
       </div>
-      <div class="row g-3 needs-validation">
+      <div class="col-md-6 position-relative">
         <label for="validationTooltipUsername" class="form-label">Correo</label>
         <div class="input-group has-validation">
          <input type="text" class="form-control" id="validationTooltipUsername" aria-describedby="validationTooltipUsernamePrepend" required>
@@ -33,14 +33,23 @@
         </div>
       </div>
       <div class="col-md-6 position-relative">
-        <label for="validationTooltip03" class="form-label">Celular</label>
+        <label for="inputTag">Rol</label>
+        <select id="inputTag" class="form-control" name="name_rol" ngModel required #name_rol="ngModel">
+            <option selected value="1">Administrador</option>
+            <option selected value="2">Gerente</option>
+            <option selected value="3">Ventas</option>
+        </select>
+    </div>
+
+      <div class="col-md-6 position-relative">
+        <label for="validationTooltip03" class="form-label">Nombre de Usuario</label>
         <input type="text" class="form-control" id="validationTooltip03" required>
         <div class="invalid-tooltip">
           Please provide a valid city.
         </div>
       </div>
       <div class="col-md-6 position-relative">
-        <label for="validationTooltip03" class="form-label">Teléfono</label>
+        <label for="validationTooltip03" class="form-label">Contraseña</label>
         <input type="text" class="form-control" id="validationTooltip03" required>
         <div class="invalid-tooltip">
           Please provide a valid city.
@@ -48,7 +57,7 @@
       </div>
 
       <div class="col-12" class="text-center">
-        <button class="btn btn-primary" type="submit">Actualizar</button>
+        <button class="btn btn-primary" type="submit">Crear usuario</button>
       </div>
     </form>
 
