--- a/src/app/components/sesion/sesion.component.html
+++ b/src/app/components/sesion/sesion.component.html
@@ -1,58 +1,45 @@
-<form>
+<div class="container main-container">
+  <div class="jumbotron">
 
-    <div class="form-row">
-       
-        <div class="form-group col-md-2">
-          <label for="inputNombre">Nombre</label>
-          <input type="text" class="form-control" id="inputNombre" placeholder="Nombre">
-        </div>
-        <div class="form-group col-md-2">
-            <label for="inputApellido">Apellido</label>
-            <input type="text" class="form-control" id="inputApellido" placeholder="Apellido">
-          </div>
-      
-      </div>
-
-      <div class="form-group col-md-4">
-        <label for="inputEmail4">Email</label>
-        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-      </div>
-
-
-<div class="form-row">
-       
-        <div class="form-group col-md-2">
-          <label for="inputTelefono">Telefono</label>
-          <input type="text" class="form-control" id="inputTelefono" placeholder="Telefono">
-        </div>
-
-
-        <div class="form-group col-md-2">
-            <label for="inputCelular">Celular</label>
-            <input type="text" class="form-control" id="inputCelular" placeholder="Celular">
-          </div>
-        
-      
-      </div>
-
-
-     
-
-
-      
-    <div class="form-row">
-        <div class="form-group col-md-2">
-            <label for="inputUsuario">Usuario</label>
-            <input type="text" class="form-control" id="inputUsuario" placeholder="Usuario">
-          </div>
-      
-      <div class="form-group col-md-3">
-        <label for="inputPassword4">Password</label>
-        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-      </div>
-    </div>
+      <h1 class="display-4 animated fadeIn fast">Forma parte de nuestra Tienda virtual ISI</h1>
+      <hr class="my-4 animated fadeIn">
+      <p class="animated fadeIn">Registrate y disfruta de nuestros productos</p>
   
-   
-    
-    <button type="submit" class="btn btn-primary">Sign up</button>
-  </form>
+      <form class="row g-3 needs-validation" novalidate>
+  
+          
+  
+          <div class="form-row animated fadeIn fast">
+              <div class="form-group col-md-6">
+                  <label for="inputEmail">Email</label>
+                  <input type="email" class="form-control" id="inputEmail" name="email" ngModel #email="ngModel"
+                  [class.is-invalid]="email.invalid && email.touched"
+                  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$"
+                  minlength="1"
+                  required >
+              <small class="form-text text-danger" *ngIf="email.invalid && email.touched">Ingrese un correo valido</small> 
+              </div>
+             
+          </div>
+          <div class="form-row animated fadeIn fast">
+              <div class="form-group col-md-6">
+                  <label for="inputPassword4">Contraseña</label>
+                  <input type="password" class="form-control" id="inputPassword4" name="password" ngModel #password="ngModel"
+                  [class.is-invalid]="password.invalid && password.touched"
+                  minlength="8"
+                  pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}"
+                  required >
+                  <small class="form-text text-danger" *ngIf="password.invalid && password.touched">Debe tener un minimo de 10 caracteres, un numero y una mayuscula </small>
+              </div>
+            
+          </div>  
+  
+          <div class="col-12">
+            <button class="btn btn-primary" type="submit">registrarse</button>
+          </div>
+    </form>
+    <br>
+     
+  </div>
+
+</div>
