--- a/src/app/components/sesion/sesion.component.html
+++ b/src/app/components/sesion/sesion.component.html
@@ -7,7 +7,17 @@
   
       <form class="row g-3 needs-validation" novalidate>
   
-          
+        <div class="form-group animated fadeIn fast">
+          <div class="form-group col-md-6">
+          <label for="inputFirstname">Nombre</label>
+          <input type="text" class="form-control" id="inputFirstname" name="firstname" ngModel #firstname="ngModel"
+          [class.is-invalid]="firstname.invalid && firstname.touched"
+          minlength="1"
+          pattern=".*\S+.*"
+          required >
+      <small class="form-text text-danger" *ngIf="firstname.invalid && firstname.touched">El campo es obligatorio</small>
+      </div>
+    </div>
   
           <div class="form-row animated fadeIn fast">
               <div class="form-group col-md-6">
@@ -19,14 +29,16 @@
                   required >
               <small class="form-text text-danger" *ngIf="email.invalid && email.touched">Ingrese un correo valido</small> 
               </div>
-             
+            
           </div>
+ 
+
           <div class="form-row animated fadeIn fast">
               <div class="form-group col-md-6">
                   <label for="inputPassword4">Contraseña</label>
                   <input type="password" class="form-control" id="inputPassword4" name="password" ngModel #password="ngModel"
                   [class.is-invalid]="password.invalid && password.touched"
-                  minlength="8"
+                  minlength="10"
                   pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{10,}"
                   required >
                   <small class="form-text text-danger" *ngIf="password.invalid && password.touched">Debe tener un minimo de 10 caracteres, un numero y una mayuscula </small>
