--- a/src/app/components/user/user-admin/user-form.component.html
+++ b/src/app/components/user/user-admin/user-form.component.html
@@ -13,14 +13,14 @@
         <label for="validationTooltip01" class="form-label">Nombres</label>
         <input type="text" class="form-control" id="validationTooltip01" value="Mark" required>
         <div class="valid-tooltip">
-          Looks good!
+          Please choose a valid name.
         </div>
       </div>
       <div class="col-md-6 position-relative"><br><br>
         <label for="validationTooltip02" class="form-label">Apellidos</label>
         <input type="text" class="form-control" id="validationTooltip02" value="Otto" required>
         <div class="valid-tooltip">
-          Looks good!
+          Please choose a valid lastname.
         </div>
       </div>
       <div class="col-md-6 position-relative">
@@ -28,7 +28,7 @@
         <div class="input-group has-validation">
          <input type="text" class="form-control" id="validationTooltipUsername" aria-describedby="validationTooltipUsernamePrepend" required>
           <div class="invalid-tooltip">
-            Please choose a unique and valid username.
+            Please choose a valid email.
           </div>
         </div>
       </div>
@@ -45,16 +45,22 @@
         <label for="validationTooltip03" class="form-label">Nombre de Usuario</label>
         <input type="text" class="form-control" id="validationTooltip03" required>
         <div class="invalid-tooltip">
-          Please provide a valid city.
+          Please provide a valide username.
         </div>
       </div>
+
+      <div class="form-row animated fadeIn fast">
       <div class="col-md-6 position-relative">
-        <label for="validationTooltip03" class="form-label">Contraseña</label>
-        <input type="text" class="form-control" id="validationTooltip03" required>
-        <div class="invalid-tooltip">
-          Please provide a valid city.
-        </div>
+        <label for="inputPassword4" class="form-control">Contraseña</label>
+        <input type="password" class="form-control" id="inputPassword4" name="password" ngModel #password="ngModel"
+        [class.is-invalid]="password.invalid && password.touched"
+        minlength = "8"
+        pattern = "(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" required>
+        <small class="form-text text-danger" *ngIf="password.invalid && password.touched">
+          La contraseña debe tener al menos 8 caracteres, un numero y una letra mayuscula
+        </small>
       </div>
+    </div>
 
       <div class="col-12" class="text-center">
         <button class="btn btn-primary" type="submit">Crear usuario</button>
