--- a/src/app/components/user/user-update/user-update.component.html
+++ b/src/app/components/user/user-update/user-update.component.html
@@ -10,41 +10,57 @@
     <form class="row g-3 needs-validation" novalidate>
 
       <div class="col-md-6 position-relative"><br><br>
-        <label for="validationTooltip01" class="form-label">Nombres</label>
-        <input type="text" class="form-control" id="validationTooltip01" value="Mark" required>
-        <div class="valid-tooltip">
-          Looks good!
-        </div>
+        <label for="inputFirstname">Nombre</label>
+        <input type="text" class="form-control" id="inputFirstname" name="firstname" ngModel #firstname="ngModel"
+        [class.is-invalid]="firstname.invalid && firstname.touched"
+        minlength="1"
+        pattern=".*\S+.*"
+        required >
+        <small class="form-text text-danger" *ngIf="firstname.invalid && firstname.touched">El campo es obligatorio</small>
       </div>
+
       <div class="col-md-6 position-relative"><br><br>
-        <label for="validationTooltip02" class="form-label">Apellidos</label>
-        <input type="text" class="form-control" id="validationTooltip02" value="Otto" required>
-        <div class="valid-tooltip">
-          Looks good!
-        </div>
+        
+          <label for="inputLastname">Apellido</label>
+          <input type="text" class="form-control" id="inputLastname" name="lastname" ngModel #lastname="ngModel"
+          [class.is-invalid]="lastname.invalid && lastname.touched"
+          minlength="1"
+          pattern=".*\S+.*"
+          required >
+          <small class="form-text text-danger" *ngIf="lastname.invalid && lastname.touched">El campo es obligatorio</small>
+     
       </div>
-      <div class="row g-3 needs-validation">
-        <label for="validationTooltipUsername" class="form-label">Correo</label>
-        <div class="input-group has-validation">
-         <input type="text" class="form-control" id="validationTooltipUsername" aria-describedby="validationTooltipUsernamePrepend" required>
-          <div class="invalid-tooltip">
-            Please choose a unique and valid username.
-          </div>
+
+      <div class="form-row animated fadeIn fast">
+        <div class="form-group col-md-6">
+            <label for="inputEmail">Email</label>
+            <input type="email" class="form-control" id="inputEmail" name="email" ngModel #email="ngModel"
+            [class.is-invalid]="email.invalid && email.touched"
+            pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,8}$"
+            minlength="1"
+            required >
+        <small class="form-text text-danger" *ngIf="email.invalid && email.touched">Ingrese un correo valido</small> 
         </div>
+      
+    </div>
+      <div class="col-md-6 position-relative">
+        <label for="inputPhone">Celular</label>
+        <input type="text" class="form-control" id="inputPhone" name="phone" ngModel #phone="ngModel"
+        [class.is-invalid]="phone.invalid && phone.touched"
+        minlength="6"
+        pattern="^\+?\d{6,}"
+        required >
+    <small class="form-text text-danger" *ngIf="phone.invalid && phone.touched">campo obligatorio o el campo esta incorrecto</small>
       </div>
       <div class="col-md-6 position-relative">
-        <label for="validationTooltip03" class="form-label">Celular</label>
-        <input type="text" class="form-control" id="validationTooltip03" required>
-        <div class="invalid-tooltip">
-          Please provide a valid city.
-        </div>
-      </div>
-      <div class="col-md-6 position-relative">
-        <label for="validationTooltip03" class="form-label">Teléfono</label>
-        <input type="text" class="form-control" id="validationTooltip03" required>
-        <div class="invalid-tooltip">
-          Please provide a valid city.
-        </div>
+
+        <label for="inputPhone">Telefono</label>
+                    <input type="text" class="form-control" id="inputPhone" name="phone" ngModel #phone="ngModel"
+                    [class.is-invalid]="phone.invalid && phone.touched"
+                    minlength="6"
+                    pattern="^\+?\d{6,}"
+                    required >
+                <small class="form-text text-danger" *ngIf="phone.invalid && phone.touched">campo obligatorio o el campo esta incorrecto</small>
       </div>
 
       <div class="col-12" class="text-center">
