--- a/src/app/components/user/user-admin/user-admin.component.html
+++ b/src/app/components/user/user-admin/user-admin.component.html
@@ -37,6 +37,6 @@
     </div>
 
     <div class="position-absolute top-50 start-50">
-      <button class="btn btn-dark" type="button" [routerLink]="['/user/form']">Nuevo usuario</button>
+      <button class="btn btn-dark" type="button" [routerLink]="['/user-admin/user-form']">Nuevo usuario</button>
     </div>
 </div>
