--- a/src/app/components/user/user-admin/user-admin.component.css
+++ b/src/app/components/user/user-admin/user-admin.component.css
@@ -1,5 +1,5 @@
 .container-sm{
-  margin-top: 100px;
+  margin-top: 70px;
   margin-left: 250px;
   margin-right: 70px;
   margin-bottom: 100px;
@@ -10,9 +10,18 @@
 
 }
 .card-tittle{
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 .table.table-sm{
-  margin-top: 35px;
+  margin-top: 90px;
+}
+
+.position.top-50.start-50{
+  margin-bottom: 25px;
+}
+
+.position-absolute.start-50.translate-middle{
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
