--- a/src/app/components/user/user-admin/user-form.component.css
+++ b/src/app/components/user/user-admin/user-form.component.css
@@ -19,3 +19,16 @@
   margin-top: 20px;
 
 }
+
+.position-absolute.start-50.translate-middle{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.row.g-3.needs-validation{
+  margin-top: 40px;
+}
+
+.btn-space {
+  margin-right: 5px;
+}
