--- a/src/app/components/user/user-admin/user-admin.component.html
+++ b/src/app/components/user/user-admin/user-admin.component.html
@@ -21,6 +21,8 @@
             <th scope="col">Rol</th>
             <th scope="col">Usuario</th>
             <th scope="col">Contraseña</th>
+            <th scope="col">Acción</th>
+
           </tr>
         </thead>
 
@@ -32,6 +34,12 @@
             <td>{{user.rol}}</td>
             <td>{{user.username}}</td>
             <td>{{user.password}}</td>
+           <td>
+            <div>
+              <button type="button" name="btnEdit" class="btn btn-primary" [routerLink]="['/user-admin/form', user.user_id]">Editar</button>
+             <button  name="btnDelete" class="btn btn-danger" (click)="delete(user)">Eliminar</button>
+            </div>
+            </td>
           </tr>
         </tbody>
 
