--- a/src/app/components/profile-view/profile-view.component.html
+++ b/src/app/components/profile-view/profile-view.component.html
@@ -48,7 +48,7 @@
                       
                     </div>
                     <div class="col-sm-9 text-secondary" >
-                      
+                      {{user.name}}
                     </div>
                     
                   </div>
@@ -62,7 +62,7 @@
                       <h6 class="mb-0">Apellido</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                    
+                      {{user.lastname}}
                     </div>
                   </div>
                   <hr>
@@ -71,16 +71,16 @@
                       <h6 class="mb-0">Email</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                   
+                      {{user.email}}
                     </div>
                   </div>
                   <hr>
                   <div class="row">
                     <div class="col-sm-3">
-                      <h6 class="mb-0">Telefono</h6>
+                      <h6 class="mb-0">Nombre de Usuario</h6>
                     </div>
                     <div class="col-sm-9 text-secondary">
-                      
+                      {{user.username}}
                     </div>
                   </div>
                   <hr>
