--- a/src/app/components/products/form-product.component.html
+++ b/src/app/components/products/form-product.component.html
@@ -40,13 +40,32 @@
 
             </div>
             <div class="form-group row">
-                <label for ="status" class="col-form-label col-sm-2">Status</label>
+                <label for ="status" class="col-form-label col-sm-2">Stock</label>
                 <div class="col-sm-6">
-                    <input type="text" class="form-control" name="status" [(ngModel)]="product.status" >
+                    <input type="text" class="form-control" name="stock" [(ngModel)]="product.stock" >
+                </div>
+
+            </div>
+            <div class="form-group row">
+                <label for ="categoria" class="col-form-label col-sm-2">Categoria</label>
+                <div class="col-sm-6">
+                    <input type="text" class="form-control" name="categoria" [(ngModel)]="product.categoria_categoria_id" >
                 </div>
 
             </div>
 
+            <!-- <button class="btn btn-success" role="button" (click)='create()' *ngIf="!product.product_id else elseBlock">Agregar</button> -->
+            <!-- <div class="custom-file">
+                <input type="file" class="custom-file-input" id="imagen" #imagenInputFile  
+                (change)="selectFiles($event)" accept="image/png, image/jpeg, image/gif">
+                <label class="custom-file-label" for="imagen">Elige una imagen</label>
+            </div>
+            <div *ngIf="selectedFiles" class="mt-5">
+                <h5>Vista Previa:</h5>
+                <div>
+                    <img class="image-thumbnail" style="max-height: 100px" *ngFor="let im of imagenMin" [src]="im">
+                </div>
+            </div> -->
             <button class="btn btn-success" role="button" (click)='create()' *ngIf="!product.product_id else elseBlock">Agregar</button>
             
             <ng-template #elseBlock>
