--- a/src/app/components/list-clients/list-clients.component.html
+++ b/src/app/components/list-clients/list-clients.component.html
@@ -19,11 +19,11 @@
           </thead>
 
           <tbody>
-            <tr *ngFor="let user of user">
-              <th scope="row">{{user.user_id}}</th>
+            <tr *ngFor="let client of client">
+              <th scope="row">{{client.client_id}}</th>
             
-              <td>{{user.username}}</td>
-              <td>{{user.email}}</td>
+              <td>{{client.username}}</td>
+              <td>{{client.email}}</td>
            
             </tr>
   
