--- a/src/app/components/sesion/sesion.component.html
+++ b/src/app/components/sesion/sesion.component.html
@@ -37,7 +37,7 @@
 
 <div class="form-group animated fadeIn fast">
   <div class="form-group col-md-6">
-  <label for="inputclientname">Ingresa tu correo</label>
+  <label for="inputclientname">ICorreo electronico</label>
  
     <input type="email" class="form-control" name="email" [(ngModel)]="client.email" >
 
